# HACKATHON_ECS_2025

./: README.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  page.tsx
frontend/src/app/UI/: army.tsx  city.tsx  fight.tsx  map.tsx  military.tsx  techboard.tsx
frontend/src/app/military/: page.tsx
frontend/src/app/technology/: page.tsx
game_logic/: city_rebellion.cpp  economic_growth.cpp  economic_growth.h  enemy_attack.cpp  event_manager.h  game_class.h  game_logic.cpp  game_world.cpp  game_world.h  main.cpp  military_tactics.cpp  military_tactics.h  militaryexperience.h  militaryexperince.cpp  negotation.h  negotations.cpp  population_growth.cpp  population_growth.h  pyproject.toml  simulation.cpp  simulation_data.csv  societal_conditions.h  soecietal_conditions.cpp  soecietal_conditions.h  technology_tree.h  tree_technology.cpp
ml/: agents.py
